--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -46,6 +46,15 @@
 }
 
 body {
+    font-family: var(--font-ibm-plex-mono), Arial;
+}
+
+h1 {
+    font-family: var(--font-ibm-plex-mono), Arial;
+    color: #3178C6;
+}
+
+p {
     font-family: var(--font-ibm-plex-sans), Arial;
 }
 
