--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -79,6 +79,23 @@ input[type="number"] {
     -moz-appearance: textfield;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #2c2c2c;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #555;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #888;
+}
+
 :root {
     --background: oklch(0.12 0.002 277);
     --foreground: oklch(1 0 0);
